# yoga_pose_recognition

./: .env  .gitignore  README.md  electron-builder.yml  package-lock.json  package.json  pyproject.toml
data/: background.json  course.json  pose.json
main/: background.ts
renderer/components/: CameraViewer.tsx  InfoDisplay.tsx
renderer/pages/: _app.tsx  home.tsx
renderer/store/: index.ts
renderer/store/slices/: poseSlice.ts
yoga_pose_recognition/: __init__.py  __main__.py  log.py  main.py  settings.py
yoga_pose_recognition/detection/: body_connections.py  yoga_pose_detector.py
yoga_pose_recognition/detection/models/: pose.py
yoga_pose_recognition/detection/utils/: camera.py  drawing_utils.py
yoga_pose_recognition/web/: __init__.py  application.py
yoga_pose_recognition/web/api/: __init__.py  router.py
yoga_pose_recognition/web/api/course/: __init__.py  views.py
yoga_pose_recognition/web/api/video/: __init__.py  schema.py  views.py
